End Chapter 3 - Added Database, AutoMapper, Repositories, Unit of Work and DTOs

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DW-D710XY1\\SQL2014; Database=Hotels; Trusted_Connection=True; MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
