End Chapter 5 - Added JWT Security as Default Authentication

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -1,13 +1,17 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DW-D710XY1\\SQL2014; Database=Hotels; Trusted_Connection=True; MultipleActiveResultSets=True"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DW-D710XY1\\SQL2014; Database=Hotels; Trusted_Connection=True; MultipleActiveResultSets=True"
+  },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "Lifetime": 15
   },
   "AllowedHosts": "*"
 }
